feat: HasSetters test for asserting working setters